# dpapp

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  format.sh
app/: CMakeLists.txt  crt.pem  key.pem
app/cpp/: CMakeLists.txt  echo_cet.cc  echo_svr.cc
app/cwc/: CMakeLists.txt  echo_cet.c  echo_cet_bm.c  echo_svr.c  http_svr.c
app/lua/: CMakeLists.txt  echo_cet.lua  echo_svr.lua  http_svr.lua
cmake/: cmake_uninstall.cmake.in  dpacoConfig.cmake.in  dpappConfig.cmake.in  dpapp_binConfig.cmake.in  dpapp_package.cmake  dpapp_stage.cmake  dpcppConfig.cmake.in  dpcwcConfig.cmake.in  dpluaConfig.cmake.in  dplua_compiler.cmake  patch_ucoro_stage.sh  ucoro-config.stage.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  benchmark.md  build.md  detail.md  develop.md  dpdoxy_groups.h  start.md
lib/: dpapp_config.h.in
lib/dpaco/: CMakeLists.txt  dpaco.c  dpaco.h  dpaco_amd64.S  dpaco_arch.c  dpaco_arch.h  dpaco_arm64.S  dpaco_riscv.S
lib/dpapp/: CMakeLists.txt  dpapp.c  dpapp.h  dpasc.c  dpasc.h  dpbuf.c  dpbuf.h  dpdef.h  dpefd.c  dpefd.h  dpevp.h  dplog.c  dplog.h  dpqic.c  dpqic.h  dprbt.h  dpret.c  dpret.h  dpssl.c  dpssl.h  which.c  which.h
lib/dpapp/os/: dpevp_pri.c  dpevp_pri.h  dppip.c  dpspd.c  dptcp.c  dpudp.c  dpudp_pri.h  dpuds.c
lib/dpapp/os/bsd/: dpasc_kqueue.c  dpevp_kqueue.c  dpfsm.c  dpsig.c  dpudp_pri.c
lib/dpapp/os/linux/: dpasc_epoll.c  dpevp_epoll.c  dpfsm.c  dpsig.c  dpudp_pri.c
lib/dpcpp/: CMakeLists.txt  dpcpp.cc  dpcpp.hh  dpcpp_aco.cc  dpcpp_aco.hh  dpcpp_asc.hh  dpcpp_aux.cc  dpcpp_aux.hh  dpcpp_buf.hh  dpcpp_ele.hh
lib/dpcwc/: CMakeLists.txt  dpcwc.c  dpcwc.h  dpcwc_asc.h  dpcwc_aux.c  dpcwc_aux.h
lib/dplua/: CMakeLists.txt  dpasc.lua  dpbuf.lua  dpele.lua  dpext.lua  dpfsm.lua  dplog.lua  dplua.c  dplua.h  dplua.lua  dplua_ext.c  dplua_ext.h  dppip.lua  dpqic.lua  dpret.lua  dpsig.lua  dpspd.lua  dpssl.lua  dpsvr.lua  dptcp.lua  dpudp.lua  dpuds.lua
tst/: CMakeLists.txt  test_basic.c  test_common.sh  test_coroutine.c  test_coroutine_perf.c  test_ctc_perf.c  test_cwc.c  test_cwc.sh  test_echo.sh  test_fsm_sig_pip.c  test_fsm_sig_pip.cc  test_fsm_sig_pip.lua  test_fsm_sig_pip.sh  test_http.sh  test_lco.c  test_lua.lua  test_qic_hdrset.c
tst/single/: helloworld.lua
